FIX: sonar-project-propierts

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,4 +1,5 @@
-sonar.projectKey=go-project
+sonar.projectKey=Alladio_sonarcloud
+sonar.organization=alladio
 
 sonar.sources=.
 sonar.exclusion=**/*_test.go
